--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@prisma/client": "^4.8.1",
     "@types/bcrypt": "^5.0.0",
     "@types/chalk": "^2.2.0",
     "@types/cors": "^2.8.13",
