--- a/package.json
+++ b/package.json
@@ -9,31 +9,30 @@
   },
   "author": "LukazDs",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.20",
-    "prettier": "^2.8.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
-  },
   "dependencies": {
-    "@faker-js/faker": "^7.6.0",
-    "@prisma/client": "^4.8.1",
+    "@prisma/client": "^4.4.0",
+    "bcrypt": "^5.0.1",
+    "chalk": "^5.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
+    "joi": "^17.6.1",
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.8.0",
+    "prisma": "^4.4.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.5.0",
     "@types/bcrypt": "^5.0.0",
     "@types/chalk": "^2.2.0",
-    "@types/cors": "^2.8.13",
+    "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.15",
-    "@types/jsonwebtoken": "^9.0.0",
-    "@types/node": "^18.11.18",
-    "@types/pg": "^8.6.6",
-    "bcrypt": "^5.1.0",
-    "chalk": "^5.2.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-async-errors": "^3.1.1",
-    "jsonwebtoken": "^9.0.0",
-    "pg": "^8.8.0",
-    "prisma": "^4.8.1"
+    "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/node": "^18.7.23",
+    "@types/pg": "^8.6.5",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
