--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "editor.fontFamily": "Fira Code",
     "editor.fontSize": 16,
-    "editor.fontLigatures": true
-    "editor.fontWeight": "500"
+    "editor.fontLigatures": true,
+    "editor.fontWeight": "450"
 }
