--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "editor.fontFamily": "Fira Code",
     "editor.fontSize": 16,
     "editor.fontLigatures": true,
-    "editor.fontWeight": "450"
+    "editor.fontWeight": "450",
+    "editor.fontVariations": false
 }
